hphp/hack/test/typecheck/user_attributes_naming.php
<?hh

<<__Whatever>>
class C {}
